force-app/main/default/objects/Referrals__c.object
<CustomObject>
    <description>This objects captures the referrals from a MonTRACK SSA</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <description>Captures the organization/service of Monash that a student is referred to from MonTRACK</description>
        <label>Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Referral given</fullName>
                </value>
                <value>
                    <fullName>Chaplains</fullName>
                </value>
                <value>
                    <fullName>Childcare</fullName>
                </value>
                <value>
                    <fullName>Counselling Service</fullName>
                </value>
                <value>
                    <fullName>Disability Services</fullName>
                </value>
                <value>
                    <fullName>English Connect</fullName>
                </value>
                <value>
                    <fullName>Employment and Careers</fullName>
                </value>
                <value>
                    <fullName>eSolutions</fullName>
                </value>
                <value>
                    <fullName>Faculty Course Adviser</fullName>
                </value>
                <value>
                    <fullName>Faculty Student Services</fullName>
                </value>
                <value>
                    <fullName>Faculty Tutor/Lecturer/Unit Coordinator</fullName>
                </value>
                <value>
                    <fullName>Health Service</fullName>
                </value>
                <value>
                    <fullName>Research and Learning Online</fullName>
                </value>
                <value>
                    <fullName>Learning Skills Adviser</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Monash Abroad</fullName>
                </value>
                <value>
                    <fullName>Monash Connect</fullName>
                </value>
                <value>
                    <fullName>Monash Postgraduate Association (MPA)</fullName>
                </value>
                <value>
                    <fullName>Monash Residential Services</fullName>
                </value>
                <value>
                    <fullName>Monash Sport</fullName>
                </value>
                <value>
                    <fullName>Safer Community</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Student Association</fullName>
                </value>
                <value>
                    <fullName>Student Rights</fullName>
                </value>
                <value>
                    <fullName>Supervisor follow up required</fullName>
                </value>
                <value>
                    <fullName>Team Monash</fullName>
                </value>
                <value>
                    <fullName>Yulendj Indigenous Engagement Unit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the MonTRACK call round</description>
        <label>Round</label>
        <referenceTo>Round__c</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSA_Comments__c</fullName>
        <label>SSA Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSA_Identified__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the SSA who provided the referral</description>
        <label>SSA Identified</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the student who was referred by the SSA</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mt_Resolution_notes__c</fullName>
        <description>Describes the resolution undertaken by a MonTRACK SSA</description>
        <label>Resolution notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mt_Resolved_Date_time__c</fullName>
        <description>Indicates the time when a student&apos;s concerns were resolved by the SSA</description>
        <label>Resolved Date/time</label>
        <type>DateTime</type>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REF-{00000}</displayFormat>
        <label>Referral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>